# browservice

./: .gitignore  BUILD.md  CODEINFO.md  LICENSE  Makefile  README.md  README_NIX.md  download_cef.sh  flake.nix  nixos-module.nix  setup_cef.sh  vice_plugin_api.h  vice_plugin_api.hpp
.github/workflows/: nix-build.yml
html/: clipboard.html  clipboard_iframe.html  download_iframe.html  main.html  new_session.html  next.html  popup_iframe.html  pre_main.html  pre_prev.html  prev.html
retrowebvice/: Makefile  gen_html_header.py
retrowebvice/src/: common.hpp  context.cpp  context.hpp  html.hpp  http.cpp  http.hpp  vice.cpp  vice_plugin_api.cpp
src/: bookmarks.cpp  bookmarks.hpp  browser_area.cpp  browser_area.hpp  browser_font_render_mode.cpp  browser_font_render_mode.hpp  button.cpp  button.hpp  clipboard.cpp  clipboard.hpp  common.cpp  common.hpp  config.cpp  config.hpp  config_defs.hpp  control_bar.cpp  control_bar.hpp  credits.cpp  credits.hpp  data_url.cpp  data_url.hpp  download_manager.cpp  download_manager.hpp  event.cpp  event.hpp  find_bar.cpp  find_bar.hpp  globals.cpp  globals.hpp  go_button.cpp  go_button.hpp  html.hpp  http.cpp  http.hpp  image_compressor.cpp  image_compressor.hpp  image_slice.cpp  image_slice.hpp  jpeg.cpp  key.cpp  (+39 more)
src/tiny_sha3/: sha3.cpp  sha3.hpp
test/: README.md  index.html  page1.html  page2.html  page3.html  page4.html  page5.html
tools/: build_appimage.sh  build_cef.sh  build_patched_cef.py  build_windows.py  qemu_smoke_test.sh  smoke_test.py
tools/appimage_build_data/: browservice.desktop  build_appimage_impl.sh  relocate_fontconfig_cache.c  run_browservice
tools/build_cef_docker_image/: Dockerfile
tools/gen_appimage_data/: build_appimage_impl.sh  collect_appimage.sh  create_appimage.sh
tools/linux_cef_build_docker_image/: Dockerfile
tools/qemu_smoke_test_data/: config_arch_x86_64.sh  config_debian_11_aarch64.sh  config_debian_11_x86_64.sh  config_fedora_36_aarch64.sh  config_fedora_36_x86_64.sh  config_fedora_38_aarch64.sh  config_fedora_38_x86_64.sh  (+16 more)
winbuild/: CMakeLists.txt  README.md  browservice.rc  resource.h
(+51 files in other folders)
