file(GLOB_RECURSE BROWSERVICE_SRCS ../src/*.cpp ../src/*.hpp)
set(BROWSERVICE_SRCS ${BROWSERVICE_SRCS} browservice.rc resource.h)

source_group(browservice FILES ${BROWSERVICE_SRCS})
set(CEF_TARGET "browservice")
ADD_LOGICAL_TARGET("libcef_lib" "${CEF_LIB_DEBUG}" "${CEF_LIB_RELEASE}")
SET_CEF_TARGET_OUT_DIR()
add_executable(${CEF_TARGET} WIN32 ${BROWSERVICE_SRCS})
add_dependencies(${CEF_TARGET} libcef_dll_wrapper retrojsvice)
SET_EXECUTABLE_TARGET_PROPERTIES(${CEF_TARGET})
target_link_libraries(${CEF_TARGET} libcef_lib libcef_dll_wrapper ${CEF_STANDARD_LIBS})
ADD_LOGICAL_TARGET("cef_sandbox_lib" "${CEF_SANDBOX_LIB_DEBUG}" "${CEF_SANDBOX_LIB_RELEASE}")
target_link_libraries(${CEF_TARGET} cef_sandbox_lib ${CEF_SANDBOX_STANDARD_LIBS})
ADD_WINDOWS_MANIFEST("${CMAKE_CURRENT_SOURCE_DIR}" "${CEF_TARGET}" "exe")
COPY_FILES("${CEF_TARGET}" "${CEF_BINARY_FILES}" "${CEF_BINARY_DIR}" "${CEF_TARGET_OUT_DIR}")
COPY_FILES("${CEF_TARGET}" "${CEF_RESOURCE_FILES}" "${CEF_RESOURCE_DIR}" "${CEF_TARGET_OUT_DIR}")
target_compile_features(${CEF_TARGET} PRIVATE cxx_std_17)
target_compile_options(${CEF_TARGET} PRIVATE [=[/I$(_ZVcpkgCurrentInstalledDir)$(VcpkgConfigSubdir)\include\pango-1.0]=])
target_compile_options(${CEF_TARGET} PRIVATE [=[/I$(_ZVcpkgCurrentInstalledDir)$(VcpkgConfigSubdir)\include\glib-2.0]=])
target_compile_options(${CEF_TARGET} PRIVATE [=[/I$(_ZVcpkgCurrentInstalledDir)$(VcpkgConfigSubdir)\lib\glib-2.0\include]=])
target_compile_options(${CEF_TARGET} PRIVATE [=[/I$(_ZVcpkgCurrentInstalledDir)$(VcpkgConfigSubdir)\include\harfbuzz]=])

file(GLOB_RECURSE RETROJSVICE_SRCS ../viceplugins/retrojsvice/src/*.cpp ../viceplugins/retrojsvice/src/*.hpp)
set(RETROJSVICE_SRCS ${RETROJSVICE_SRCS} ../viceplugins/retrojsvice/gen/html.cpp)
source_group(retrojsvice FILES ${RETROJSVICE_SRCS})
add_library(retrojsvice SHARED ${RETROJSVICE_SRCS})
target_compile_features(retrojsvice PRIVATE cxx_std_17)
target_link_options(retrojsvice PRIVATE [=[/IMPLIB:$(IntDir)\retrojsvice.lib]=])
